# jumpnbump

./: .gitignore  CMakeLists.txt  ChangeLog  Makefile  README.md  conan_update_debug  conanfile.txt  globals.h  main.c  main.cpp  menu.c
data/: chara_anim_data.json  objects.json  rabbit.json
data/charas/dott/: data.json
data/charas/fizz/: data.json
data/charas/jiffy/: data.json
data/charas/mijji/: data.json
docs/: jumpnbump.html
docs/levelmaking/: jumpnbump_levelmaking.htm
sdl/: gfx.c  gfx.cpp  input.c  interrpt.cpp  sound.cpp
src/: anim_frame_t.cpp  anim_frame_t.h  anim_handler_t.cpp  anim_handler_t.h  anim_t.cpp  anim_t.h  application_t.cpp  application_t.h  ban_map.cpp  ban_map.h  ban_map_t.cpp  ban_map_t.h  bounding_box_t.cpp  bounding_box_t.h  character_t.cpp  character_t.h  data.cpp  data.h  dj.h  draw.cpp  draw.h  game_manager_t.cpp  game_manager_t.h  globals.h  gob.cpp  gob.h  gob_t.cpp  gob_t.h  joy_t.cpp  joy_t.h  leftovers.cpp  leftovers.h  leftovers_t.cpp  leftovers_t.h  level_t.cpp  level_t.h  main.cpp  main_info.cpp  main_info.h  map_element_t.cpp  (+42 more)
src/sdl/: gfx.cpp  gfx.h  input.cpp  interrpt.cpp  jumpnbump128.xpm  jumpnbump64.xpm  sound.cpp
